Big updates on 0168 re SNIPPET1_NoShare

--- a/0167-2023-10-27.md
+++ b/0167-2023-10-27.md
@@ -72,8 +72,7 @@ Don't worry: We'll use this same CUP to integrate raybox-zero after doing these 
 1.  Clone raybox-zero repo, `ew` branch:
     ```bash
     cd ~/CUP/verilog/rtl
-    git clone -b ew git@github.com:algofoogle/raybox-zero
-    cd 
+    git clone -b ew git@github.com:algofoogle/raybox-zero  #NOTE: 'ew' branch
     ```
 2.  Delete `user_proj_example.v` and edit `user_project_wrapper.v` to paste in the [instantiation snippet](https://github.com/algofoogle/raybox-zero/blob/ew/src/rtl/ew_caravel_snippets/SNIPPET1_NoShare.v).
 3.  Edit `verilog/includes/includes.rtl.caravel_user_project` and replace the `user_proj_example.v` line with all our relevant source files. Result:
