Many more updates on 0168

--- a/0165-2023-10-24.md
+++ b/0165-2023-10-24.md
@@ -44,7 +44,7 @@
     # ...then in docker...
     time ./flow.tcl -design raybox-zero
     ```
-    Time it takes: 9~10 minutes (12~13 with 2 cores instead of 4).
+    Time it takes: 9-10 minutes (12-13 with 2 cores instead of 4).
 6.  ```
     [WARNING]: There are max fanout violations in the design at the typical corner. Please refer to 'designs/raybox-zero/runs/RUN_2023.10.24_06.24.38/reports/signoff/25-rcx_sta.slew.rpt'.
     [INFO]: There are no hold violations in the design at the typical corner.
