Minor updates to 0168

--- a/0168-2023-10-28.md
+++ b/0168-2023-10-28.md
@@ -14,7 +14,7 @@
 *   Wrote updated texture ROM to test with updated design on FPGA
 *   Got it working with initial frame rendering test: Had to fix some issues, but seems fine now, and it can generate an output full-frame VGA preview from cocotb too.
 *   Removed other tests.
-
+*   Got GL tests running... maybe?? Commit [0bd6d05](https://github.com/algofoogle/raybox-zero-caravel/commit/468ee0972edfacc5a788d0d79f5e08ae976ff512) has the goods, and I can run `make coco_test_gl` but if I define the `UNIT_DELAY` to be `#10`, it still works. That doesn't seem right.
 
 ## Plan
 
@@ -456,6 +456,13 @@ What if we try a long slab macro?
     `define USER_CONFIG_GPIO_26_INIT `GPIO_MODE_USER_STD_INPUT_NOPULL
     ```
 
+## Checker script
+
+1.  ```bash
+    cd ~/CUP
+    make run-precheck
+    ```
+2.  Look inside `precheck_results/`
 
 # Full summary of my successful top_ew_algofoogle harden in `~/CUP/openlane`
 
@@ -611,7 +618,7 @@ time flashrom -c $SPICHIP -p $SPIPORT -w goodwolfwalls-2xbgr.bin
 # Next steps
 
 *   If we continue to have trouble with fanout and antenna violators, maybe try dropping to Q11.11 to see if it reduces some complexity or at least shakes things up.
-*   Test with `make csr`! It's not definitive but Without it we're even more at the mercy of the difference between Quartus and Yosys!
+*   Test with `make csr`! It's not definitive but without it we're even more at the mercy of the difference between Quartus and Yosys!
 *   Fix cocotb deprecation:
     ```
     /home/zerotoasic/asic_tools/caravel_user_project/verilog/dv/rbz_basic/test_rbz_basic.py:12: DeprecationWarning: cocotb.fork has been deprecated in favor of cocotb.start_soon and cocotb.start.
@@ -620,7 +627,7 @@ time flashrom -c $SPICHIP -p $SPIPORT -w goodwolfwalls-2xbgr.bin
 *   [Coroutines are used in cocotb for running stuff in parallel](https://docs.cocotb.org/en/stable/writing_testbenches.html#concurrent-and-sequential-execution), e.g. monitoring for an event alongside another test.
 *   Find out: In cocotb, when working with a bidirectional wire, do we need to assign `Z` in cocotb in order to be able to read it? i.e. will a preexisting 1 or 0 value in cocotb override what the design is trying to drive?
 *   Feed o_reset back to a LA.
-*   Implement a test to make sure essential constants (e.g. for reciprocal and pov) are being defined properly during synth
+*   Implement a test to make sure essential constants (e.g. for reciprocal and pov) are being defined properly during synth -- well they seem to be working via my rbz_basic test.
 *   Check the GHAs for raybox-zero-caravel: Disable, fix, or replace with our own
 *   Adapt my TT05 design to support the VGA PMOD spec, and maybe the same for SPI ROM: https://tinytapeout.com/specs/pinouts/
 
