Update 0169 with some harden test results

--- a/0165-2023-10-24.md
+++ b/0165-2023-10-24.md
@@ -204,7 +204,7 @@ According to Ellen's chart:
 ![Ellen's pin allocation](i/0165-ew-pins.png)
 
 It should be OK for me to get 8 digital IOs and 1 analog. Interpreting this chart, using *zero-based* numbering for the Caravel IOs:
-*   IO[37:36] are reserved by John. Not sure why yet.
+*   IO[37:36] are reserved for SoC QSPI flash io[3:2]
 *   IO[35:27] are Ellen's digital pins.
 *   IO[26:19] are 8 digital for Anton.
 *   IO[18] is 1 analog for Anton (could change to digital if I can't get my DAC design done) -- for me, this would be Caravel's `analog_io[11]`, I think.
