--- a/0169-2023-10-30.md
+++ b/0169-2023-10-30.md
@@ -8,9 +8,10 @@
 
 # Next steps
 
-*   Review EWSPEC and create and test:
+*   Review EWSPEC, then create and test:
     *   [SNIPPET2_ShareIns](https://github.com/algofoogle/raybox-zero/blob/ew/doc/EWSPEC.md#if-9-pads-available-plus-extra-sharedmuxed-inputs)
-    *   [SNIPPET3_ShareInOut](https://github.com/algofoogle/raybox-zero/blob/ew/doc/EWSPEC.md#if-9-pads-available-plus-extra-sharedmuxed-inputs-and-outputs)
+    *   [SNIPPET3_ShareMuxIO](https://github.com/algofoogle/raybox-zero/blob/ew/doc/EWSPEC.md#if-9-pads-available-plus-extra-sharedmuxed-inputs-and-outputs)
+*   NOTE: Testing each will need a different test per each snippet, PLUS a different UPW per each.
 *   Core design improvements: Put in other general raybox-zero features
 *   Option for un/registered RGB outputs
 *   Maybe drop to Q11.11?
@@ -19,3 +20,140 @@
 *   Re-shape and reorder pins for top_ew_algofoogle
 *   Test texture ROM in SIM
 *   Feed o_reset back to a LA.
+*   Design a buffer macro in case it's needed
+
+# Before team meeting
+
+*   Diagrams to show placement and congestion, and possible buffer/routing macro idea
+*   Test all links in EWSPEC
+*   Share updated EWSPEC
+
+
+# Notes
+
+*   What is CUP's [`verilog/rtl/uprj_netlists.v`](https://github.com/algofoogle/raybox-zero-caravel/blob/ew/verilog/rtl/uprj_netlists.v)?
+*   I've started keeping past harden configs/runs in `at6` and above in `openlane/*/`
+*   Aliases:
+    ```bash
+    alias maketeaupw='cd ~/CUP && make top_ew_algofoogle && make user_project_wrapper'
+    alias tea-gds='cd ~/CUP && summary.py --caravel --design top_ew_algofoogle --gds'
+    alias upw-gds='cd ~/CUP && summary.py --caravel --design user_project_wrapper --gds'
+    ```
+
+# at7
+
+*   Put zeros, ones, and main I on W.
+*   Put rgb on N.
+*   Change width so LAs on S mostly line up.
+*   Higher LA on E.
+*   Placement is nearest LAs
+*   LAs all line up pretty well
+*   user_clock2 goes past a bunch of LAs. It might affect them
+
+# at8
+
+*   Move all outputs to the top of W, followed by inputs, followed by zeros, then ones.
+*   Place macro up and a little to the left
+*   Delete FP_IO_V/HTHICKNESS_MULT
+*   Expect:
+    *   TEA: Slight change in bottom-left logic, since outputs have moved.
+    *   UPW: Better IO performance, worse LA, worse user_clock2
+*   Check:
+    *   `logs/signoff/34-antenna.log`
+    *   `reports/signoff/25-rcx_sta.slew.rpt`
+*   Result:
+    *   TEA:
+        *   GDS:
+        *   Antenna step log: 1 iters, 2 remaining
+        *   Antenna violations: count: 8 - worst: 633/400 **(good)**
+        *   Fanout: count: 30 - worst: 28 (input36/X) - avg: -5
+        *   Slews: 0
+        *   Caps: 0
+    *   UPW:
+        *   GDS:
+        *   Antenna step log: 0
+        *   Antenna violations: count: 0 - worst: nil
+        *   Fanout: 0
+        *   Slews: 2 - io_in[25]=-0.37, la_data_in[114]=-0.20
+        *   Caps: 3 - io_in[25]=-0.09, la_data_in[114]=-0.05, io_in[26]=-0.01
+        *   user_clock2: OK
+
+![](i/0169-at8-tea-gds.png)
+
+![](i/0169-at8-upw-gds.png)
+
+# at9
+
+*   Portrait (vertical) orientation: 400x900
+*   Plan for LHS placement
+*   N: All IOs/zeros/ones
+*   E: Most LAs
+*   S: RGBs on left, low LAs on right
+*   W: Nothing?
+*   Check:
+    *   `logs/signoff/34-antenna.log`
+    *   `reports/signoff/25-rcx_sta.slew.rpt`
+*   Result:
+    *   TEA:
+        *   GDS:
+        *   Antenna step log: 1 iters, 8 remaining
+        *   Antenna violations: count: 10 - worst: 1019/400 **(BAD!)**
+        *   Fanout: count: 57 - worst: 25 (clkbuf) - avg: -8
+        *   Slews: 0
+        *   Caps: 0
+    *   UPW:
+        *   GDS:
+        *   Antenna step log: nil
+        *   Antenna violations: nil
+        *   Fanout: 0
+        *   Slews: 10 - most are LA -0.8, user_clock2=-0.17
+        *   Caps: 10 - mostly same as slews, user_clock2=-0.05
+
+![](i/0169-at9-tea-gds.png)
+
+![](i/0169-at9-upw-gds.png)
+
+# at10
+
+*   Let OpenLane choose its own size:
+    ```json
+    "FP_SIZING": "relative",
+    "FP_CORE_UTIL": 45,
+    "PL_TARGET_DENSITY": 0.55,
+    ```
+*   Keep pin placement as-is
+*   Keep macro placement as-is
+*   Result:
+    *   TEA:
+        *   GDS:
+        *   Antenna step log: X iters, X remaining
+        *   Antenna violations: count: X - worst: X/400 **(?)**
+        *   Fanout: count: X - worst: X (?) - avg: X
+        *   Slews:
+        *   Caps:
+    *   UPW:
+        *   GDS:
+        *   Antenna step log:
+        *   Antenna violations: count:  - worst:
+        *   Fanout:
+        *   Slews:
+        *   Caps:
+
+
+# at11
+
+*   Result:
+    *   TEA:
+        *   GDS:
+        *   Antenna step log: X iters, X remaining
+        *   Antenna violations: count: X - worst: X/400 **(?)**
+        *   Fanout: count: X - worst: X (?) - avg: X
+        *   Slews:
+        *   Caps:
+    *   UPW:
+        *   GDS:
+        *   Antenna step log:
+        *   Antenna violations: count:  - worst:
+        *   Fanout:
+        *   Slews:
+        *   Caps:
