--- a/0169-2023-10-30.md
+++ b/0169-2023-10-30.md
@@ -8,40 +8,87 @@
 
 # Done
 
+*   Re-shape and reorder pins for top_ew_algofoogle
 *   Created [`SNIPPET2_ShareIns.v`](https://github.com/algofoogle/raybox-zero/blob/ew/src/rtl/ew_caravel_snippets/SNIPPET2_ShareIns.v)
-*   Ran 13 harden tests on my macro (and UPW) until I settled on new parameters.
+*   Ran 13 harden tests on my macro (and UPW) until I settled on [new parameters](https://github.com/algofoogle/raybox-zero-caravel/commit/dbb1c955252a87824267e1b2c46f0c4bc9254428) (see: [at13 (Attempt 13) notes](#at13) and [GDS hardening results](https://github.com/algofoogle/raybox-zero-caravel/commit/1373e09b51cabc37df5f1227489eb1d677cb3bb1)).
+*   Tested SNIPPET2_ShareIns successfully: RTL and GL.
+*   Re-ran existing rbz_basic test with `make coco_test_gl` for SNIPPET1; it still works.
+*   Created [`ew-snippet2-test` branch](https://github.com/algofoogle/raybox-zero-caravel/tree/ew-snippet2-test) and set it up with improved tests. They work! Got red and blue channels coming out now. I hardened UPW with SNIPPET2, too, and it seemed fine.
 
 # Next steps
 
-*   Review EWSPEC, then create and test:
-    *   [SNIPPET2_ShareIns](https://github.com/algofoogle/raybox-zero/blob/ew/doc/EWSPEC.md#if-9-pads-available-plus-extra-sharedmuxed-inputs)
-    *   [SNIPPET3_ShareMuxIO](https://github.com/algofoogle/raybox-zero/blob/ew/doc/EWSPEC.md#if-9-pads-available-plus-extra-sharedmuxed-inputs-and-outputs)
-*   NOTE: Testing each will need a different test per each snippet, PLUS a different UPW per each.
+*   Write [SNIPPET3_ShareMuxIO](https://github.com/algofoogle/raybox-zero/blob/ew/doc/EWSPEC.md#if-9-pads-available-plus-extra-sharedmuxed-inputs-and-outputs)
 *   Core design improvements: Put in other general raybox-zero features
 *   Option for un/registered RGB outputs
 *   Maybe drop to Q11.11?
 *   Review EWSPEC
-*   Try newer OpenLane 1.x and updated CUP -- Matt's MPW9 instructions
-*   Re-shape and reorder pins for top_ew_algofoogle
-*   Test texture ROM in SIM
+*   Try newer OpenLane 1.x and updated CUP -- Matt's MPW9 instructions -- esp. new precheck
+*   Consider listing each reordered pin explicitly
+*   Test texture ROM in SIM -- will allow us to test texture effects such as address addend.
 *   Feed o_reset back to a LA.
 *   Design a buffer macro in case it's needed
+*   Consider placing pins differently for INPUT pads... even though they might switch between top-left and LHS regions.
+
+# Re-run existing SNIPPET1 GL test
+
+```bash
+cd ~/CUP/verilog/dv/rbz_basic
+make coco_test_gl
+```
+
+Takes about 15mins to run.
+
+![rbz_basic_frame0.ppm output from test](i/0169-rbz_basic_frame0.png)
+
+Check resulting frame capture (even watching it load live): `xdg-open rbz_basic_frame0.ppm` -- if it displays an image, the design is probably working OK...?
+
+This verifies that -- through the GL netlist -- the firmware is able to:
+*   Configure SoC's GPIO as output, and pulse it.
+*   Configure MPRJ GPIOs (because `user_define.v` is not used in this sim...?)
+*   Configure LAs as outputs and mux-select gpout[0] and [1] (blue colour channel). NOTE: If rendering more than 1 frame, we should also see that 'demo mode' is working via LA selection too.
+*   Reset lock can be asserted and released by LA.
+*   Mux is working and gpouts are outputting blue channel data (though rendered as green in the output image file).
+*   `i_debug_vec_overlay` should be visible, also asserted by LA.
+
+NOTE: For me, the test didn't fail with `-DUNIT_DELAY=#1` or `#10`, which seems a little unlikely... but it DID fail when set to `#100` -- I think due to it sending an invalid command to the SPI flash (which has its own `$stop`). It even still works at `#40`??
 
 
-# SNIPPET2_ShareIns
+
+# New CUP branch for SNIPPET2_ShareIns
 
 [`SNIPPET2_ShareIns.v`](https://github.com/algofoogle/raybox-zero/blob/ew/src/rtl/ew_caravel_snippets/SNIPPET2_ShareIns.v)
 
-1.  Backup existing CUP working project.
-2.  Paste snippet into UPW.
-3.  Update `user_define`s
+1.  Back up existing CUP working project -- plan to delete it, because git branches should do what we need instead. NOTE: It's about 8.5GB.
+2.  Create `ew-snippet2-test` branch -- NOTE: The rest of the EW team shouldn't really need anything from it, because it's just for me to test SNIPPET2. The main top_ew_algofoogle GDS, Verilog, netlist should not change in this new branch.
+3.  Paste snippet into UPW.
+4.  Update `user_defines`
+5.  NOTE: Need to make sure `io_oeb[]` is set correctly for the shared inputs, e.g. add this above the snippet in UPW (which I had to do for simulations/tests):
+    ```verilog
+    assign {io_oeb[35:34], io_oeb[32:31]} = a1s[3:0]; //NOTE: a1s is a source of constant '1's
+    ```
+6.  CHECK: Can UPW harden this, inc. using top_ew_algofoogle.gds.GZ?? NOPE, it needs to be uncompressed.
+    ```bash
+    cd ~/CUP/gds
+    gunzip top_ew_algofoogle.gds.gz
+    cd ..
+    make user_project_wrapper
+    ```
+6.  Update tests, esp. more colour: Keep firmware code that sets gpout[1:0] to blue channel. Leave gpout[3:2] as default red channel. Update test to use these actual 2 colour channels.
 
+NOTE: I had to change the test so that the texture flash ROM was sensing and asserting `MPRJ_IO[22]` directly, instead of via my signal `io_tex_io0`. I retained that signal to use in the tests, but trying to *assert* via that doesn't seem to work, i.e. it doesn't apply an assigned value back to all of its connected nets. Maybe this is just a cocotb thing, though. Not sure.
+
+![](i/0169-snippet2-frame0.png)
+
+FWIW, UPW harden has basically the same slew/cap results as [at13](#at13). In fact, slightly better because its input lines are shorter.
+
+UPW GDS from step 6 above:
+
+![](i/0169-snippet2-upw-gds.png)
 
 
 # Before team meeting
 
 *   Diagrams to show placement and congestion, and possible buffer/routing macro idea
-*   Test all links in EWSPEC
 *   Share updated EWSPEC
 
 
@@ -55,6 +102,15 @@
     alias tea-gds='cd ~/CUP && summary.py --caravel --design top_ew_algofoogle --gds'
     alias upw-gds='cd ~/CUP && summary.py --caravel --design user_project_wrapper --gds'
     ```
+
+# Previous hardening attempts (at7..at12)
+
+| :exclamation: IDEA: |
+|---|
+| A very tall macro would probably help with slew/cap issues from long LA/IO wires: Places LA/user_clock2 nearer the bottom-right, and IOs nearer the top-left. |
+
+<details>
+<summary>Click to see attempts 7 to 12...</summary>
 
 # at7
 
@@ -97,6 +153,7 @@
 ![](i/0169-at8-tea-gds.png)
 
 ![](i/0169-at8-upw-gds.png)
+
 
 # at9
 
@@ -271,6 +328,9 @@
 
 ![](i/0169-at12-upw-gds.png)
 
+</details>
+
+
 
 # at13
 
@@ -335,4 +395,3 @@
         *   Slews:
         *   Caps:
 
-NOTE: A very tall macro would probably do it, placing LA/user_clock2 nearer the bottom-right, and IOs nearer the top-left.
